--- a/M2-Solution/css/style.css
+++ b/M2-Solution/css/style.css
@@ -1,1 +1,90 @@
+html {
+    font-size: 16px;
+    font-family: Arial, Helvetica, sans-serif;
+}
 
+/* Header */
+
+header {
+    margin: 5% 0;
+}
+h1 {
+    text-align: center;
+    font-size: 175%;
+    margin-top: 5%;
+}
+
+/* Body */
+.container {
+    display: flex;
+    justify-content: center;
+    column-gap: 20px;
+    padding: 10px 20px;
+}
+
+.sections {
+    border: 1px solid #000;
+    background-color: #999;
+    width: 100%;
+}
+
+.sections p {
+    padding: 25px 20px 0 20px;
+}
+
+.section-title {
+    padding: .5% 10%;
+    float: right;
+    background-color: #fff;
+    color: #fff;
+    font-size: 125%;
+    text-align: center;
+    font-weight: bold;
+    border: 1px solid black;
+}
+
+/* Section Title Styling */
+
+#section-1 .section-title {
+    background-color: #f4a261;
+}
+
+#section-2 .section-title {
+    background-color: #2a9d8f;
+}
+
+#section-3 .section-title {
+    background-color: #e9c46a;
+}
+
+/* Media Queries for Tablet */
+
+@media screen and (max-width: 991px) and (min-width: 768px) {
+    header {
+        margin: 2% 0;
+    }
+    .container {
+        flex-flow: row wrap;
+        row-gap: 20px;
+        padding: 3%;
+    }
+
+   #section-1, #section-2 {
+        width: 48.4%;
+        column-gap: 15px;
+    }
+
+}
+
+/* Media Queries for Phone */
+
+@media only screen and (max-width: 767px) {
+    .container {
+        background-color: cornsilk;
+        flex-wrap: wrap;
+        row-gap: 20px;
+        padding: 0 10%;
+    }
+
+    
+}
